@@ -1,3 +1,6 @@
+2006-04-21 David Anderson <davea@sgi.com>
+      * dwarf_frame.c: Initialized local to 0, wrong value.
+        Thanks to Cristi Vlasceanu for noticing.
 2006-04-18 David Anderson <davea@sgi.com>
       * All *.c: Ran indent so all c files follow a standard look.
 2006-04-16 David Anderson <davea@sgi.com>
